# GP-Lab-Work

./: README.md
Lab3/: CMakeLists.txt  main.cpp
Lab4/: CMakeLists.txt  Shader.cpp  main.cpp
Lab4/shaders/: shaderStart.frag  shaderStart.vert
Lab5/: CMakeLists.txt  Camera.cpp  Shader.cpp  main.cpp
Lab5/shaders/: shaderStart.frag  shaderStart.vert
OpenGL Libs/OpenGL_Libs/lib/debug/: glfw3.lib  libglew32d.lib
OpenGL Libs/OpenGL_Libs/lib/release/: glfw3.lib  libglew32.lib
